<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZJUWLAN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login_logout">登录与注销</string>
    <string name="key_ssid">ssid</string>
    <string name="ssid">当前连接： </string>
    <string name="no_ssid">当前未连接WiFi</string>
    <string name="enabling_wifi">正在打开WiFi...</string>
    <string name="click_change_wifi">点击切换WiFi接入点</string>
    <string name="key_login_logout">login_logout</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="login_ok">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="logout_ok">注销成功</string>
    <string name="logout_fail">注销失败</string>

    <string name="user_info">账户信息</string>
    <string name="key_username">username</string>
    <string name="key_passowrd">password</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>

    <string name="key_autologin">autologin</string>
    <string name="autologin">自动登录</string>

</resources>
